<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	
	<groupId>com.boubei</groupId>
	<artifactId>tss</artifactId>
	<packaging>war</packaging>
	<version>5.0</version>
	<name>BouBei TSS Project</name>
	
	<organization>
		<name>boubei software</name>
		<url>http://www.boubei.com</url>
	</organization>
	<url>http://www.boubei.com</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<tss.version>5.0</tss.version>
		<jdk.version>1.8</jdk.version>
		<spring.version>5.3.2</spring.version>
		<hibernate.version>5.3.7.Final</hibernate.version>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
	</properties>

	<dependencies>
		<!-- tss dependencies start -->
		<!-- BASE dependency -->
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.9.4</version>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.5</version>
		</dependency>
		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.4.15</version>
		</dependency>
		<dependency>
			<groupId>dom4j</groupId>
			<artifactId>dom4j</artifactId>
			<version>1.6.1</version>
		</dependency>
		<dependency>
			<groupId>jaxen</groupId>
			<artifactId>jaxen</artifactId>
			<version>1.1.1</version>
			<exclusions>
				<exclusion>
					<groupId>com.ibm.icu</groupId>
					<artifactId>icu4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- SPRING DEPENDENCIES -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId> <!-- Timer、Quartz -->
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<!-- Add JPA 2.0 / Hibernate dependencies -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate.version}</version>
		</dependency>
		<dependency>
		    <groupId>org.hibernate</groupId>
		    <artifactId>hibernate-entitymanager</artifactId>
		    <version>${hibernate.version}</version>
		</dependency>
		
		<dependency>
			<groupId>com.mchange</groupId>
			<artifactId>c3p0</artifactId>
			<version>0.9.5.4</version>
		</dependency>

		<!-- Mysql DB driver 4 release -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.44</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
		<dependency>
		    <groupId>org.postgresql</groupId>
		    <artifactId>postgresql</artifactId>
		    <version>42.1.4.jre6</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
		<dependency>
		    <groupId>com.microsoft.sqlserver</groupId>
		    <artifactId>mssql-jdbc</artifactId>
		    <version>6.2.2.jre7</version>
		</dependency>
		
		<!-- Oracle DB driver 4 release 
		<dependency>
			<groupId>ojdbc</groupId>
			<artifactId>ojdbc</artifactId>
			<version>14</version>
		</dependency>
		-->

		<!-- Other DEPENDENCIES -->
		<dependency>
		    <groupId>org.freemarker</groupId>
		    <artifactId>freemarker</artifactId>
		    <version>2.3.28</version>
		</dependency>
		
		<dependency>
			<groupId>commons-httpclient</groupId>
			<artifactId>commons-httpclient</artifactId>
			<version>3.1</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.8</version>
		</dependency>
		
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.7</version>
		</dependency>
		<dependency>
		    <groupId>org.quartz-scheduler</groupId>
		    <artifactId>quartz</artifactId>
		    <version>2.3.2</version>
		</dependency>

		<!-- Jackson JSON Mapper -->
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-jaxrs</artifactId>
			<version>1.9.12</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>1.9.12</version>
		</dependency>
		<dependency>
		    <groupId>org.json</groupId>
		    <artifactId>json</artifactId>
		    <version>20180130</version>
		</dependency>

		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		
		<!-- excel -->
		<dependency>
			<groupId>net.sourceforge.jexcelapi</groupId>
			<artifactId>jxl</artifactId>
			<version>2.6.12</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi</artifactId>
		    <version>3.17</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi-ooxml</artifactId>
		    <version>3.17</version>
		</dependency>
		
		<dependency>
		    <groupId>eu.bitwalker</groupId>
		    <artifactId>UserAgentUtils</artifactId>
		    <version>1.21</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
		    <version>3.0.1</version>
			<scope>provided</scope>
		</dependency>
		
		<!-- Test DEPENDENCIES -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>2.3</version>
			<scope>test</scope>
		</dependency>
		
		<!-- H2 DEPENDENCIES -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.2.125</version>
			<scope>test</scope>
		</dependency>
		
		<!-- Jetty DEPENDENCIES -->
		<dependency>
			<groupId>org.eclipse.jetty.aggregate</groupId>
			<artifactId>jetty-all</artifactId>
			<version>8.1.12.v20130726</version>
			<scope>test</scope>
		</dependency>
		
		<!-- provided -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
		    <version>3.0.1</version>
			<scope>provided</scope>
		</dependency>
		
		
	</dependencies>

	<build>
		<defaultGoal>install</defaultGoal>
		<finalName>${project.artifactId}</finalName>

		<pluginManagement>
			<plugins>
				<!-- test report -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-report-plugin</artifactId>
					<version>2.16</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			
			<plugin>  
                <artifactId>maven-source-plugin</artifactId>  
                <version>2.1</version>  
                <configuration>  
                    <attach>true</attach>  
                </configuration>  
                <executions>  
                    <execution>  
                        <phase>compile</phase>  
                        <goals>  
                            <goal>jar</goal>  
                        </goals>  
                    </execution>  
                </executions>  
            </plugin>            

			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<skip>false</skip> <!-- skip junit test -->
					<includes>
						<include>**/*Test.java </include>
					</includes>
					<testFailureIgnore>true</testFailureIgnore>
					<argLine>
						-Xms256m -Xmx1024m -XX:MaxPermSize=256M
					</argLine>
					<forkCount>1</forkCount>
        			<reuseForks>true</reuseForks> <!-- 表示一个测试进程执行完了之后是杀掉还是重用来继续执行后续的测试。 默认配置为forkCount=1/reuseForks=true -->
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.16</version>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<locales>EN</locales> <!-- ZH_CN -->
				</configuration>
			</plugin>

			<!-- test coverage: mvn cobertura:cobertura -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.5.2</version>
				<executions>
					<execution>
						<phase>site</phase>
						<goals>
							<goal>cobertura</goal>
						</goals>
					</execution>
				</executions>
				<!-- JDK7版本要加入以下設定
                <configuration>
                    <argLine>-XX:-UseSplitVerifier</argLine>
                </configuration>
                 -->
			</plugin>
			
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>8.1.12.v20130726</version>
				<configuration>
					<webAppConfig>
						<contextPath>/tss</contextPath>
					</webAppConfig>
					<connectors>
						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
							<port>9000</port>
						</connector>
					</connectors>
					<stopPort>9966</stopPort>
					<stopKey>tss</stopKey>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.1.1</version>
				<configuration>
                    <archiveClasses>true</archiveClasses> <!--将Java源码类编译文件打成jar包-->
                    <webResources>
			            <resource>
			                <directory>target/classes</directory>
			                <includes>
	                            <include>application.properties</include>
	                            <include>log4j.properties</include>
	                            <include>script/**/*.*</include>
	                            <include>freemarker/**/*.*</include>
	                        </includes>
			                <targetPath>WEB-INF/classes</targetPath>
			                <filtering>true</filtering>
			            </resource>
			        </webResources>
                </configuration>
			</plugin>

			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<executions>
					<execution>
						<phase>process-resources</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<tasks>
								<echo>
									process log4j.properties: set log4j.logger.com.boubei to ${log.level};
								</echo>
								<replaceregexp 
									file="${basedir}/target/classes/log4j.properties"
									match="log4j.logger.com.boubei=debug" 
									replace="log4j.logger.com.boubei=${log.level}" byline="true" />
									
								<echo>
									process application.properties: set job.enable to ${job.enable};
								</echo>
								<replaceregexp
									file="${basedir}/target/classes/application.properties" 
									match="job.enable = true" replace="job.enable = ${job.enable}" byline="true" />

								<echo>
									process application.properties: set security.level to ${security.level};
								</echo>
								<replaceregexp
									file="${basedir}/target/classes/application.properties" 
									match="security.level = 2" replace="security.level = ${security.level}" byline="true" />
									
								<echo>
									process application.properties: set last.package.time to
									${maven.build.timestamp};
								</echo>
								<replaceregexp
									file="${basedir}/target/classes/application.properties" 
									match="last\.package\.time = yyyy-MM-dd hh:mi:ss"
									replace="last\.package\.time = ${maven.build.timestamp}" byline="true" />
								<echo>
									process application.properties: set localhost:3306/tss to ${db.url};
								</echo>
								<replaceregexp
									file="${basedir}/target/classes/application.properties" 
									match="username root" replace="username ${db.username}" byline="true" />
								<replaceregexp
									file="${basedir}/target/classes/application.properties" 
									match="boubei@com" replace="${db.password}" byline="true" />
								<replaceregexp
									file="${basedir}/target/classes/application.properties" 
									match="localhost:3306\/tss" replace="${db.url}" byline="true" />
								<echo>
									process application.properties: set environment to ${environment};
								</echo>
								<replaceregexp
									file="${basedir}/target/classes/application.properties" 
									match="environment = dev" 
									replace="environment = ${environment}" byline="true" />
									
								<echo>
									process appServers.xml: set tomcat.url to ${tomcat.url};
								</echo>
								<replaceregexp
									file="${basedir}/target/classes/tss/appServers.xml" 
									match="localhost:9090" replace="${tomcat.url}" byline="true" />
							</tasks>
						</configuration>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>ant</groupId>
						<artifactId>ant-nodeps</artifactId>
						<version>1.6.5</version>
					</dependency>
					<dependency>
						<groupId>ant</groupId>
						<artifactId>ant-apache-regexp</artifactId>
						<version>1.6.5</version>
					</dependency>
				</dependencies>
			</plugin>
			
			<!-- mvn clean compile assembly:single -->
			<plugin>
				<artifactId> maven-assembly-plugin </artifactId>
				<version>2.4</version>
				<configuration >
					<descriptors>
						<descriptor>src/main/assembly/tss-client-package.xml</descriptor>
						<descriptor>src/main/assembly/tss-all-package.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>make-jar</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin> 
        	
		</plugins>
	</build>

	<profiles>
		<!-- eg: mvn clean install  -Pxxx -Dmaven.test.skip=true -->
		<profile>
			<id>dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<environment>dev-tss</environment>
				<security.level>6</security.level>
				<log.level>info</log.level>
				<job.enable>true</job.enable>
				<db.username>root</db.username>
				<db.password>boubei@com</db.password>
				<db.url>127.0.0.1:3306/tssbi</db.url>
				<tomcat.url>localhost:8088</tomcat.url>
			</properties>
		</profile>

		<profile>
			<id>boubei</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<environment>matrix</environment>
				<security.level>6</security.level>
				<log.level>info</log.level>
				<job.enable>true</job.enable>
				<db.username>root</db.username>
				<db.password>boubei@com</db.password>
				<db.url>boubei.com:3306/tssbi</db.url>
				<tomcat.url>www.boubei.com</tomcat.url>
			</properties>
		</profile>
		
	</profiles>

	<reporting>
		<plugins>
			<!-- mvn dashboard:dashboard -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>dashboard-maven-plugin</artifactId>
				<version>1.0.0-beta-1</version>
			</plugin>
		</plugins>
	</reporting>

	<distributionManagement>
		<site>
			<id>www.boubei.com</id>
			<url>file://</url>
		</site>
	</distributionManagement>

</project>